--- a/PAC1/src/experiencies.html
+++ b/PAC1/src/experiencies.html
@@ -41,7 +41,7 @@
                 <source media="(min-width: 992px)" srcset="/img/img_op/vinya_fons_experiencies-1600.webp" type="image/webp">
                 <source media="(min-width: 768px)" srcset="/img/img_op/vinya_fons_experiencies-960.webp" type="image/webp">
                 <source srcset="/img/img_op/vinya_fons_experiencies-480.webp" type="image/webp">
-                <img src="/img/img_op/vinya_fons_experiencies-480.webp" alt="Vinya per a experiències" class="hero-img" width="1600" height="600" fetchpriority="high" decoding="async" loading="eager">
+                <img src="/img/img_op/vinya_fons_experiencies-480.webp" alt="Vinya per a experiències" class="hero-img" width="1600" height="600" decoding="async" loading="eager">
             </picture>
 
             <h1>Descobreix les nostres experiències</h1>
