--- a/PAC1/src/index.html
+++ b/PAC1/src/index.html
@@ -41,7 +41,7 @@
                 <source media="(min-width: 992px)" srcset="/img/img_op/copa-vi-fons-home-1600.webp" type="image/webp">
                 <source media="(min-width: 768px)" srcset="/img/img_op/copa-vi-fons-home-960.webp" type="image/webp">
                 <source srcset="/img/img_op/copa-vi-fons-home-480.webp" type="image/webp">
-                <img src="/img/img_op/copa-vi-fons-home-480.webp" alt="Copa de vi de fons" class="hero-img" width="1600" height="600" fetchpriority="high" decoding="async" loading="eager">
+                <img src="/img/img_op/copa-vi-fons-home-480.webp" alt="Copa de vi de fons" class="hero-img" width="1600" height="600" decoding="async" loading="eager">
             </picture>
             <h1>VINE A TASTAR LA EXPERIÈNCIA</h1>
         <p>visita les vinyes amb sabor propi</p>
