--- a/PAC1/src/pack1.html
+++ b/PAC1/src/pack1.html
@@ -41,7 +41,7 @@
                 <source media="(min-width: 992px)" srcset="/img/img_op/celler-pack1-1600.webp" type="image/webp">
                 <source media="(min-width: 768px)" srcset="/img/img_op/celler-pack1-960.webp" type="image/webp">
                 <source srcset="/img/img_op/celler-pack1-480.webp" type="image/webp">
-                <img src="/img/img_op/celler-pack1-480.webp" alt="Celler pack 1" class="hero-img" width="1600" height="600" fetchpriority="high" decoding="async" loading="eager">
+                <img src="/img/img_op/celler-pack1-480.webp" alt="Celler pack 1" class="hero-img" width="1600" height="600" decoding="async" loading="eager">
             </picture>
             <h1>Explora i Gaudeix: Visita + Tast de Vins</h1>
         </div>
