--- a/PAC1/src/sobre_nosaltres.html
+++ b/PAC1/src/sobre_nosaltres.html
@@ -41,7 +41,7 @@
                 <source media="(min-width: 992px)" srcset="/img/img_op/vinya_fons_quiSom-1600.webp" type="image/webp">
                 <source media="(min-width: 768px)" srcset="/img/img_op/vinya_fons_quiSom-960.webp" type="image/webp">
                 <source srcset="/img/img_op/vinya_fons_quiSom-480.webp" type="image/webp">
-                <img src="/img/img_op/vinya_fons_quiSom-480.webp" alt="Fons qui som" class="hero-img" width="1600" height="600" fetchpriority="high" decoding="async" loading="eager">
+                <img src="/img/img_op/vinya_fons_quiSom-480.webp" alt="Fons qui som" class="hero-img" width="1600" height="600" decoding="async" loading="eager">
             </picture>
             <h1>Qui som</h1>
         </div>
